2005-03-03 <meissner@suse.de>

	* gtk/src/treeview.ccg: insert_column(): Used (void*)0 instead of 0 
	for the terminating vararg, to avoid g++ 4.0 warning about  missing 
	sentinel in function call.

2005-03-03  Albert Chin <thewrittenword.com>

	* configure.in: Check whether funlockfile(), flockfile(), and 
	getc_unlocked() are really available to the compiler, rather than 
	just present in a library.
	* demos/gtk-demo/demo-window.c: Use the new tests.

2005-02-07  Ronald Lembcke <es186@fen-net.de>

	* gdk/src/dragcontext.ccg: get_targets(): Actually step through the 
	list, instead of looping infinitely. Bug #166412.

2005-02-03  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/targetlist.ccg: Add TargetList:: prefix to the create 
	method, so that it is actually defined. Bug found by Ronald Lembcke.

2.4.11:

2005-02-02  Murray Cumming  <murrayc@murrayc.com>
  
 	* examples/cellrenderercustom/cellrenderertoggle.cc: AppWindow:
 	Move the inner ModelColumns class outside of the AppWindow class, 
 	because the IRIX MipsPro compiler (wrongly) says that its 
 	destructor it was referenced but not defined.
 	* examples/gdk/radar.cc: Added #include of math.h, needed by 
 	IRIX MipsPro compiler.

2005-02-02  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treeview.hg:
	_connect_auto_store_editable_signal(): Use an intermediate 
	function pointer, because the IRIX MipsPro compiler needs that. 

2005-02-01  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/treeview.hg, colorselection.ccg: Remove the #ifdefs for AIX, 
 	because sigc::bind now works on AIX.

2005-02-01  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/clipboard/ideal/examplewindow.cc: 
	on_clipboard_received_targets(). Use targets = targets_array instead 
	of targets(targets_array). The IRIX MipsPro compiler needs this, 
	maybe because of the ustring-std::string conversion. We should 
	maybe use ustring anyway.

2.4.10:

2005-01-25  Murray Cumming  <murrayc@murrayc.com>
  