@@ -1,3 +1,12 @@
+2005-03-19  Murray Cumming <murrayc@murrayc.com>
+ 
+ 	* demos/gtk-demo/example_treeview_editable_cells.cc:
+ 	* gtk/src/treeview.ccg:
+ 	* gtk/src/treeview.hg:
+ 	Test the result of _get_model_base() for a null refptr,
+ 	to help avoid a crash when closing a window while the 
+ 	cell renderer is in edit mode. Bug #170855.
+
 2005-03-03 <meissner@suse.de>
 
 	* gtk/src/treeview.ccg: insert_column(): Used (void*)0 instead of 0 
